4000 Register KnowledgeBaseVectorStoreMetadataService bean in MultiTenantKnowledgeBasePgVectorConfiguration